--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,32 @@ matrix:
   fast_finish: true
   include:
     - php: '7.0'
-      env: SYMFONY_VERSION='3.2.*'
+      env: SYMFONY_VERSION='v2 --prefer-lowest'
     - php: '7.0'
-      env: SYMFONY_VERSION='3.3.*'
+      env: SYMFONY_VERSION='v2'
     - php: '7.0'
-      env: SYMFONY_VERSION='3.4.*'
+      env: SYMFONY_VERSION='v3 --prefer-lowest'
+    - php: '7.0'
+      env: SYMFONY_VERSION='v3'
     - php: '7.1'
-      env: SYMFONY_VERSION='3.4.*'
+      env: SYMFONY_VERSION='v2 --prefer-lowest'
     - php: '7.1'
-      env: SYMFONY_VERSION='4.0.*'
+      env: SYMFONY_VERSION='v2'
+    - php: '7.1'
+      env: SYMFONY_VERSION='v3 --prefer-lowest'
+    - php: '7.1'
+      env: SYMFONY_VERSION='v3'
     - php: '7.2'
-      env: SYMFONY_VERSION='3.4.*'
+      env: SYMFONY_VERSION='v2 --prefer-lowest'
     - php: '7.2'
-      env: SYMFONY_VERSION='4.0.*'
+      env: SYMFONY_VERSION='v2'
+    - php: '7.2'
+      env: SYMFONY_VERSION='v3 --prefer-lowest'
+    - php: '7.2'
+      env: SYMFONY_VERSION='v3'
 
 before_install:
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_VERSION; fi
 
 install:
   - composer update $COMPOSER_FLAGS --prefer-dist --prefer-stable
