--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,26 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~3.2|~4.0",
+        "symfony/http-kernel": "~3.2|~4.0",
+        "symfony/templating": "~3.2|~4.0",
+        "symfony/event-dispatcher": "~3.2|~4.0",
+        "symfony/dependency-injection": "~3.2|~4.0",
+        "symfony/yaml": "~3.2|~4.0",
         "twig/twig": "~2.0",
-        "phpoffice/phpspreadsheet": "1.0.0-beta2"
+        "phpoffice/phpspreadsheet": "^1.0"
     },
     "require-dev": {
-        "symfony/symfony": "~3.2|~4.0",
+        "phpunit/phpunit": "^6.0",
+        "symfony/browser-kit": "~3.2|~4.0",
         "symfony/phpunit-bridge": "~3.2|~4.0",
+        "symfony/framework-bundle": "~3.2|~4.0",
         "sensio/framework-extra-bundle": "~3.2|~4.0",
+        "symfony/twig-bundle": "~3.2|~4.0",
         "mpdf/mpdf": "~7.0"
     },
     "suggest": {
-        "mpdf/mpdf": "Add support for PDF rendering, requires ~6.1"
+        "mpdf/mpdf": "Add support for PDF rendering, requires ~6.1",
+        "sensio/framework-extra-bundle": "Add format annotation support"
     },
     "autoload": {
         "psr-4": { "MewesK\\TwigSpreadsheetBundle\\": "src/" }
