--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/framework-bundle": "~3.2|~4.0",
         "sensio/framework-extra-bundle": "~3.2|~4.0",
         "symfony/twig-bundle": "~3.2|~4.0",
-        "mpdf/mpdf": "~7.0"
+        "mpdf/mpdf": "~7.0",
+        "symfony/lts": "v3"
     },
     "suggest": {
         "mpdf/mpdf": "Add support for PDF rendering, requires ~6.1",
