--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,15 +7,15 @@
         >
     <testsuites>
         <testsuite name="MewesKTwigSpreadsheetBundle Test Suite">
-            <directory>./tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./src</directory>
+            <directory>src</directory>
             <exclude>
-                <directory>./src/Resources</directory>
+                <directory>src/Resources</directory>
             </exclude>
         </whitelist>
     </filter>
