--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,17 @@ matrix:
     - php: '7.1'
       env: SYMFONY_VERSION='v3'
     - php: '7.1'
-      env: SYMFONY_VERSION='v4 --prefer-lowest'
+      env: SYMFONY_VERSION='dev-master --prefer-lowest'
     - php: '7.1'
-      env: SYMFONY_VERSION='v4'
+      env: SYMFONY_VERSION='dev-master'
     - php: '7.2'
       env: SYMFONY_VERSION='v3 --prefer-lowest'
     - php: '7.2'
       env: SYMFONY_VERSION='v3'
     - php: '7.2'
-      env: SYMFONY_VERSION='v4 --prefer-lowest'
+      env: SYMFONY_VERSION='dev-master --prefer-lowest'
     - php: '7.2'
-      env: SYMFONY_VERSION='v4'
+      env: SYMFONY_VERSION='dev-master'
 
 before_install:
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/lts=$SYMFONY_VERSION; fi
